export class Fill {
    date: Date;
    quantity: number;
}