@startuml

@startuml "dm_it2_global"

    package "Aggregate [MedicalReceipt]" <<rectangle>> #43CC72 {

        class MedicalReceipt <<Aggregate Root>>
        class Prescription <<Entity>>
        class PrescribedPosology <<Entity>>
        class Fill <<ValueObject>>

        ' Relations
        MedicalReceipt "1" *-- "1,*" Prescription
        Prescription "1" *-- "*" PrescribedPosology
        Prescription "1" *- "*" Fill
    }

    package "Aggregate [User]" <<rectangle>> #fbb034 {

            class User <<Aggregate Root>>
            class Role <<Value Object>>

            ' Relations
            MedicalReceipt o- User : patient
            MedicalReceipt o- User : physician
            User "1" *- "*" Role
        }

@enduml